--- a/task_2_multiarmed_bandit/task2_example.ipynb
+++ b/task_2_multiarmed_bandit/task2_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,14 @@
     "\n",
     "from functools import partial\n",
     "from scipy.stats import randint, uniform\n",
-    "from task_2_multiarmed_bandit.sim_lib import simulation\n",
+    "from sim_lib import simulation\n",
     "\n",
     "pd.options.mode.chained_assignment = None\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bernouli_strategy(history: pd.DataFrame, k: int = 1, n: int = 5):\n",
+    "    bets = np.random.beta(history['clicks'] + k, history['impressions'] - history['clicks'] + n)\n",
+    "    return history.index[np.argmax(bets)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class UCB_strategy:\n",
+    "    def __init__(self):\n",
+    "        self.time_stamp = 0\n",
+    "        \n",
+    "    def __call__(self, history: pd.DataFrame):\n",
+    "        self.time_stamp += 1\n",
+    "        log_t = np.sqrt(2 * np.log(self.time_stamp) / (history['impressions'] + 1)) \n",
+    "        bets = (history['clicks'] + 1) / (history['impressions'] + 1) + log_t\n",
+    "        return history.index[np.argmax(bets)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -69,10 +97,10 @@
     {
      "data": {
       "text/plain": [
-       "424.5687379837036"
+       "374.4513592720032"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +126,7 @@
        "(2792.237649427154, 0.01396118824713577, 174)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,132 +138,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 impressions have been simulated\n",
+      "10001 impressions have been simulated\n",
+      "20001 impressions have been simulated\n",
+      "30001 impressions have been simulated\n",
+      "40001 impressions have been simulated\n",
+      "50001 impressions have been simulated\n",
+      "60001 impressions have been simulated\n",
+      "70001 impressions have been simulated\n",
+      "80001 impressions have been simulated\n",
+      "90001 impressions have been simulated\n",
+      "100001 impressions have been simulated\n",
+      "110001 impressions have been simulated\n",
+      "120001 impressions have been simulated\n",
+      "130001 impressions have been simulated\n",
+      "140001 impressions have been simulated\n",
+      "150001 impressions have been simulated\n",
+      "160001 impressions have been simulated\n",
+      "170001 impressions have been simulated\n",
+      "180001 impressions have been simulated\n",
+      "190001 impressions have been simulated\n"
+     ]
+    },
+    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>impressions</th>\n",
-       "      <th>clicks</th>\n",
-       "      <th>lifetime</th>\n",
-       "      <th>p</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>19843.0</td>\n",
-       "      <td>1332.0</td>\n",
-       "      <td>10870.812904</td>\n",
-       "      <td>0.064972</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>162</th>\n",
-       "      <td>154.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>18594.827945</td>\n",
-       "      <td>0.017514</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>163</th>\n",
-       "      <td>86.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5153.010937</td>\n",
-       "      <td>0.000849</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>164</th>\n",
-       "      <td>68.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>5092.571727</td>\n",
-       "      <td>0.041281</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>166</th>\n",
-       "      <td>48.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5340.552070</td>\n",
-       "      <td>0.007253</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>167</th>\n",
-       "      <td>33.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1474.181162</td>\n",
-       "      <td>0.033849</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>168</th>\n",
-       "      <td>23.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4900.260295</td>\n",
-       "      <td>0.027273</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>169</th>\n",
-       "      <td>14.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5007.022458</td>\n",
-       "      <td>0.030857</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>170</th>\n",
-       "      <td>18.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>8920.324215</td>\n",
-       "      <td>0.034653</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171</th>\n",
-       "      <td>14.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1080.025985</td>\n",
-       "      <td>0.012549</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     impressions  clicks      lifetime         p\n",
-       "132      19843.0  1332.0  10870.812904  0.064972\n",
-       "162        154.0     2.0  18594.827945  0.017514\n",
-       "163         86.0     0.0   5153.010937  0.000849\n",
-       "164         68.0     2.0   5092.571727  0.041281\n",
-       "166         48.0     0.0   5340.552070  0.007253\n",
-       "167         33.0     0.0   1474.181162  0.033849\n",
-       "168         23.0     0.0   4900.260295  0.027273\n",
-       "169         14.0     0.0   5007.022458  0.030857\n",
-       "170         18.0     0.0   8920.324215  0.034653\n",
-       "171         14.0     0.0   1080.025985  0.012549"
+       "407.91813683509827"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "output['history']"
+    "# seed for homework\n",
+    "np.random.seed(seed=384758917)\n",
+    "\n",
+    "start = time.time()\n",
+    "output_bernoulli = simulation(bernouli_strategy, n=200000)\n",
+    "end = time.time()\n",
+    "end - start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1662.978266216189, 0.008314891331080945, 216)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# baseline regret\n",
+    "output_bernoulli['regret'], output_bernoulli['regret']/output_bernoulli['rounds'],  output_bernoulli['total_banners']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 impressions have been simulated\n",
+      "10001 impressions have been simulated\n",
+      "20001 impressions have been simulated\n",
+      "30001 impressions have been simulated\n",
+      "40001 impressions have been simulated\n",
+      "50001 impressions have been simulated\n",
+      "60001 impressions have been simulated\n",
+      "70001 impressions have been simulated\n",
+      "80001 impressions have been simulated\n",
+      "90001 impressions have been simulated\n",
+      "100001 impressions have been simulated\n",
+      "110001 impressions have been simulated\n",
+      "120001 impressions have been simulated\n",
+      "130001 impressions have been simulated\n",
+      "140001 impressions have been simulated\n",
+      "150001 impressions have been simulated\n",
+      "160001 impressions have been simulated\n",
+      "170001 impressions have been simulated\n",
+      "180001 impressions have been simulated\n",
+      "190001 impressions have been simulated\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "460.8145442008972"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# seed for homework\n",
+    "np.random.seed(seed=384758917)\n",
+    "\n",
+    "start = time.time()\n",
+    "output_ucb = simulation(UCB_random_strategy(), n=200000)\n",
+    "end = time.time()\n",
+    "end - start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9157.451510862631, 0.045787257554313156, 175)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_ucb['regret'], output_ucb['regret']/output_ucb['rounds'],  output_ucb['total_banners']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 impressions have been simulated\n",
+      "10001 impressions have been simulated\n",
+      "20001 impressions have been simulated\n",
+      "30001 impressions have been simulated\n",
+      "40001 impressions have been simulated\n",
+      "50001 impressions have been simulated\n",
+      "60001 impressions have been simulated\n",
+      "70001 impressions have been simulated\n",
+      "80001 impressions have been simulated\n",
+      "90001 impressions have been simulated\n",
+      "100001 impressions have been simulated\n",
+      "110001 impressions have been simulated\n",
+      "120001 impressions have been simulated\n",
+      "130001 impressions have been simulated\n",
+      "140001 impressions have been simulated\n",
+      "150001 impressions have been simulated\n",
+      "160001 impressions have been simulated\n",
+      "170001 impressions have been simulated\n",
+      "180001 impressions have been simulated\n",
+      "190001 impressions have been simulated\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "493.2178587913513"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# seed for homework\n",
+    "np.random.seed(seed=384758917)\n",
+    "\n",
+    "start = time.time()\n",
+    "output_gaussian = simulation(normal_strategy, n=200000)\n",
+    "end = time.time()\n",
+    "end - start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16196.556375302382, 0.08098278187651191, 183)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_gaussian['regret'], output_gaussian['regret']/output_gaussian['rounds'],  output_gaussian['total_banners']"
    ]
   },
   {
@@ -262,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
